completed responsive navbar

--- a/index.html
+++ b/index.html
@@ -6,7 +6,21 @@
   <title>TechWave</title>
   <link rel="stylesheet" href="Styles/techwave.css">
 </head>
-<body>
+<body class="inter-font">
+    <header>
+        <nav class="navbar bg-color display-flex">
+            <img src="Images/TechWave.png" alt="logo">
+            <ul class="display-flex">
+                <li class="menu-items"><a href="" class="nav-menu">About</a></li>
+                <li class="menu-items"><a href="" class="nav-menu">Episodes</a></li>
+                <li class="menu-items"><a href="" class="nav-menu">Host</a></li>
+            </ul>
+            <button class="btn">Subscribe <img src="Images/icon01.png" alt=""></button>
+            <div class="menu-icon">
+                <img src="Images/List.png" alt="List Icon">
+            </div>
+        </nav>
+    </header>
   
 </body>
 </html>
