Tried to fix some issues

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <p class="text">Your daily dose of tech insights, productivity hacks, and personal growth.</p>
                     
                 <div class="hero-buttons">
-                    <button class="btn-first"><img src="Images/spotify.png" alt="Spotify">Listen on Spotify</button>
+                    <button class="btn-first"><img src="Images/spotify.png" alt="spotify">Listen on Spotify</button>
                     <button class="btn-second"><img src="Images/message.png" alt="message">Subscribe</button>
                 </div>
 
@@ -215,10 +215,10 @@
             </div>
 
             <div class="footer-links">
-                <a href="#"><img src="Images/spotify.png" alt="Spotify">Spotify</a>
-                <a href="#"><img src="Images/cib_apple-podcasts.png" alt="Apple Podcast">Apple Podcasts</a>
-                <a href="#"><img src="Images/youtube.png" alt="YouTube">YouTube</a>
-                <a href="#"><img src="Images/twitter.png" alt="Twitter">Twitter</a>
+                <a href=""><img src="Images/spotify.png" alt="Spotify">Spotify</a>
+                <a href=""><img src="Images/cib_apple-podcasts.png" alt="Apple Podcast">Apple Podcasts</a>
+                <a href=""><img src="Images/youtube.png" alt="YouTube">YouTube</a>
+                <a href=""><img src="Images/twitter.png" alt="Twitter">Twitter</a>
             </div>
 
             <p class="footer-text">
